fix some alignment issues on home page

--- a/frontend/app/css/home.scss
+++ b/frontend/app/css/home.scss
@@ -8,11 +8,10 @@
     height: 95px;
     z-index: 3;
   }
-  
 
   //
   // Input styles
-  //#e3cd48 
+  //#e3cd48
 
   md-input-container {
     .main-login-input{
@@ -21,6 +20,7 @@
       min-height: 37px;
       margin-right: 7.5px;
       margin-left: 7.5px;
+      font-size: 14px;
       &::-webkit-input-placeholder {
         font-size: small;
         color: black;
@@ -56,15 +56,13 @@
     background-color: black;
 
   }
-  
 
   .button-yellow{
     color: #1b1b1b;
     background: #eece56;
-    padding-left: 10px !important;
-    padding-right: 10px !important;
+    padding: 0px 45px;
     margin-bottom: 0px;
-    height: 30px !important;
+    // height: 30px !important;
     font-family: 'Source Sans Pro', sans-serif !important;
     font-size: 20px !important;
   }
@@ -75,23 +73,23 @@
     margin-bottom: 0px;
     background: black ;
     color: #eece56 !important;
-    
+
   }
 
   .a-toolbar{
     font-size: small;
     position: relative;
-    
+
   }
   .a-toolbar-desktop{
     position: absolute;
     font-size: 10px;
-    top: 70px;
-    left: 770px;
+    top: 74px;
+    left: 904px;
     letter-spacing: 1px;
   }
   .div-rectangule{
-   
+
     border: 0.5px solid #1b1b1b;
     background: #eece56 !important;
     font-family: 'Source Sans Pro', sans-serif !important;
@@ -113,14 +111,20 @@
   }
 
   .rectangule-quienes{
-        border: 0.5px solid #edcf36;
-        font-size: x-small !important;
+    border: 0.5px solid #edcf36;
+    font-size: x-small !important;
+    max-width: 300px;
+    height: 360px;
+    md-icon{
+      width: 40px;
+      height: 40px;
+    }
   }
 
   .padding-icon-quienes{
     padding-left: 20px !important;
     padding-right: 20px !important;
-    padding-top: 20px;  
+    padding-top: 20px;
 
     img{
       height: 150px;
@@ -141,9 +145,9 @@
 
   }
 
-  
+
   img.icon-rectangule{
-    
+
     height: 75px !important;
     padding-top: 40px !important;
     padding-bottom: 40px !important;
@@ -188,7 +192,7 @@
     text-align: center;
     color: #1b1b1b;
     background: rgb(238, 206, 86);
-    
+
   }
 
 
@@ -196,7 +200,7 @@
     text-align: center;
     width: 100%;
     background: #1a1a1a;
-    
+
   }
 
   .div-trazoro.golden{
@@ -204,12 +208,12 @@
     background: #edcf36;
     text-align: center;
     padding-bottom: 40px;
-    padding-top: 100px !important; 
+    padding-top: 100px !important;
     .text-content{
       padding-top: 100px !important;
-      text-align: justify;  
+      text-align: justify;
       width: 600px;
-      
+
     }
     img{
       -webkit-filter: brightness(50%) !important;
@@ -236,7 +240,7 @@
     }
     h1{
       color: #231f20;
-      
+
     }
     p{
       color: #8d8e8f;
@@ -252,10 +256,22 @@
     -o-background-size: cover;
     background-size: cover;
     width: inherit !important;
-    height: 500px !important;
-
-
+    height: 580px !important;
   }
+
+  .div-trazoro.image-gold:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/img/overlay-pattern.png") #000000;
+    opacity: 0.3;
+  }
+
   .div-trazoro.quienes{
     text-align: center;
     color: rgba(255,255,255,0.87);
@@ -265,7 +281,19 @@
     -o-background-size: cover;
     background-size: cover;
     width: inherit !important;
-    
+  }
+
+  .div-trazoro.quienes:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/img/overlay-pattern.png") #000000;
+    opacity: 0.3;
   }
 
   .div-trazoro.image-loquehacemos{
@@ -281,15 +309,11 @@
   }
 
   .div-trazoro.beneficios{
-      
     color: black !important;
     background:  #fff !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    
     background-size: cover;
-    
-  
   }
 
   .login-form{
